--- a/angular.json
+++ b/angular.json
@@ -29,9 +29,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
-            ]
+            "styles": ["primeicons/primeicons.css", "primeflex/primeflex.css", "src/styles.scss"]
           },
           "configurations": {
             "production": {
